Deploy React app to GitHub Pages

--- a/index.html
+++ b/index.html
@@ -1,29 +1,1 @@
-<!doctype html>
-<html lang="en">
-
-<head>
-  <!-- The first thing in any HTML file should be the charset -->
-  <meta charset="utf-8">
-
-  <!-- Make the page mobile compatible -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Allow installing the app to the homescreen -->
-  <meta name="mobile-web-app-capable" content="yes">
-
-  <link rel="icon" href="/favicon.ico" />
-  <title>React.js Boilerplate</title>
-</head>
-
-<body>
-  <!-- Display a message if JS has been disabled on the browser. -->
-  <noscript>If you're seeing this message, that means
-    <strong>JavaScript has been disabled on your browser</strong>, please
-    <strong>enable JS</strong> to make this app work.</noscript>
-
-  <!-- The app hooks into this div -->
-  <div id="app"></div>
-  <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically injects all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this file. Don't add any assets here! (Check out webpack.dev.babel.js and webpack.prod.babel.js if you want to know more) -->
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="mobile-web-app-capable" content="yes"><link rel="icon" href="/favicon.ico"/><title>React.js Boilerplate</title><meta name="apple-mobile-web-app-title" content="React Boilerplate"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="default"/><meta name="theme-color" content="#b1624d"/><link rel="apple-touch-icon" sizes="180x180" href="/icon_180x180.33285f999db78beed5640085c051e7b1.png"/><link rel="apple-touch-icon" sizes="167x167" href="/icon_167x167.9085aba6ea24073fba72a94b7ac731a1.png"/><link rel="apple-touch-icon" sizes="152x152" href="/icon_152x152.80d43cecdc663299328632b85127117b.png"/><link rel="apple-touch-icon" sizes="120x120" href="/icon_120x120.2f7752bee9dcd06e998fd44640e47485.png"/><link rel="manifest" href="/manifest.47e77a2731a1bb975ed19ced8741b946.json"/></head><body><noscript>If you're seeing this message, that means <strong>JavaScript has been disabled on your browser</strong>, please <strong>enable JS</strong> to make this app work.</noscript><div id="app"></div><script type="text/javascript" src="/runtime.8fe28315e324b0ffe001.js"></script><script type="text/javascript" src="/npm.babel.6abce3f965f8c61bd5d3.chunk.js"></script><script type="text/javascript" src="/npm.react-app-polyfill.d3a22eeac36fbfb2977e.chunk.js"></script><script type="text/javascript" src="/npm.react-redux.37bd8022944d0edb33df.chunk.js"></script><script type="text/javascript" src="/npm.redux-saga.aa8cda85cf5a3ebc3f93.chunk.js"></script><script type="text/javascript" src="/npm.connected-react-router.b53f10d65bc314f85598.chunk.js"></script><script type="text/javascript" src="/npm.intl-messageformat.1de3860bb6253e052c4a.chunk.js"></script><script type="text/javascript" src="/npm.intl-relativeformat.8dd32a5e5a16117331c4.chunk.js"></script><script type="text/javascript" src="/npm.emotion.04980c12aacceb9f8852.chunk.js"></script><script type="text/javascript" src="/npm.hoist-non-react-statics.96f1b33fd6a1ab11db43.chunk.js"></script><script type="text/javascript" src="/main.c4109d0ce6990364870a.chunk.js"></script></body></html>
